syntax="proto2";

message QueryByIdRequest
{
  required uint64 id = 1;
}
